@@ -3,7 +3,6 @@ package io.mosip.certify.controller;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import io.mosip.certify.core.dto.*;
 import io.mosip.certify.core.spi.CredentialConfigurationService;
-import io.mosip.certify.core.spi.VCIssuanceService;
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
@@ -39,53 +38,43 @@ public class CredentialConfigControllerTest {
     @MockBean
     CredentialConfigurationService credentialConfigurationService;
 
-    @MockBean
-    VCIssuanceService vcIssuanceService;
-
     @Mock
-    private CredentialConfigurationRequest credentialConfigurationRequest;
+    private CredentialConfigurationDTO credentialConfigurationDTO;
 
     @Before
     public void setup() {
-        credentialConfigurationRequest = new CredentialConfigurationRequest();
-        credentialConfigurationRequest.setVcTemplate("test_template");
-        credentialConfigurationRequest.setContext(List.of("https://www.w3.org/2018/credentials/v1"));
-        credentialConfigurationRequest.setCredentialType(Arrays.asList("VerifiableCredential", "TestVerifiableCredential"));
-        credentialConfigurationRequest.setCredentialFormat("ldp_vc");
-        credentialConfigurationRequest.setDidUrl("did:web:test.github.io:test-env:test-folder");
-        CredentialDisplay credentialDisplay = new CredentialDisplay();
-        credentialDisplay.setName("Test Verifiable Credential");
-        credentialDisplay.setLocale("en");
-        credentialDisplay.setBackgroundColor("#FDFAF9");
-        credentialDisplay.setTextColor("#7C4616");
-        credentialDisplay.setLogo(Map.of("url", "https://www.example.com", "alt_text", "test"));
-        credentialConfigurationRequest.setDisplay(credentialDisplay);
-        credentialConfigurationRequest.setOrder(Arrays.asList("test1", "test2", "test3", "test4"));
-        credentialConfigurationRequest.setScope("test_vc_ldp");
-        credentialConfigurationRequest.setCryptographicBindingMethodsSupported(List.of("did:jwk"));
-        credentialConfigurationRequest.setCredentialSigningAlgValuesSupported(List.of("Ed25519Signature2020"));
+        credentialConfigurationDTO = new CredentialConfigurationDTO();
+        credentialConfigurationDTO.setVcTemplate("test_template");
+        credentialConfigurationDTO.setContext(List.of("https://www.w3.org/2018/credentials/v1"));
+        credentialConfigurationDTO.setCredentialType(Arrays.asList("VerifiableCredential", "TestVerifiableCredential"));
+        credentialConfigurationDTO.setCredentialFormat("ldp_vc");
+        credentialConfigurationDTO.setDidUrl("did:web:test.github.io:test-env:test-folder");
+        credentialConfigurationDTO.setDisplay(List.of());
+        credentialConfigurationDTO.setOrder(Arrays.asList("test1", "test2", "test3", "test4"));
+        credentialConfigurationDTO.setScope("test_vc_ldp");
+        credentialConfigurationDTO.setCryptographicBindingMethodsSupported(List.of("did:jwk"));
+        credentialConfigurationDTO.setCredentialSigningAlgValuesSupported(List.of("Ed25519Signature2020"));
         Map<String, Object> jwtValues = Map.of("proof_signing_alg_values_supported", Arrays.asList("RS256", "ES256"));
-        credentialConfigurationRequest.setProofTypesSupported(Map.of("jwt", jwtValues));
+        credentialConfigurationDTO.setProofTypesSupported(Map.of("jwt", jwtValues));
         Map<String, String> pluginConfigMap = new HashMap<>();
         pluginConfigMap.put("mosip.certify.mock.data-provider.test-one", "valueOne");
         pluginConfigMap.put("mosip.certify.mock.data-provider.test-two", "valueTwo");
         pluginConfigMap.put("mosip.certify.mock.data-provider.test-three", "valueThree");
-        credentialConfigurationRequest.setPluginConfigurations(List.of(pluginConfigMap));
+        credentialConfigurationDTO.setPluginConfigurations(List.of(pluginConfigMap));
+        credentialConfigurationDTO.setCredentialSubject(Map.of("name", "Full Name"));
     }
 
     @Test
     public void addNewCredentialConfiguration_Success() throws Exception {
-
-
-        Map<String, String> configurationResponse = new HashMap<>();
-        configurationResponse.put("id", "farmer-credential-config-001");
-        configurationResponse.put("status", "active");
-        Mockito.when(credentialConfigurationService.addCredentialConfiguration(credentialConfigurationRequest)).thenReturn(configurationResponse);
+        CredentialConfigResponse credentialConfigResponse = new CredentialConfigResponse();
+        credentialConfigResponse.setId("farmer-credential-config-001");
+        credentialConfigResponse.setStatus("active");
+        Mockito.when(credentialConfigurationService.addCredentialConfiguration(credentialConfigurationDTO)).thenReturn(credentialConfigResponse);
 
         mockMvc.perform(post("/credentials/configurations")
-                        .content(objectMapper.writeValueAsBytes(credentialConfigurationRequest))
+                        .content(objectMapper.writeValueAsBytes(credentialConfigurationDTO))
                         .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk())
+                .andExpect(status().isCreated())
                 .andExpect(jsonPath("$.id").exists())
                 .andExpect(jsonPath("$.status").exists());
     }
@@ -93,7 +82,7 @@ public class CredentialConfigControllerTest {
     @Test
     public void getCredentialConfigurationById_Success() throws Exception {
 
-        Mockito.when(credentialConfigurationService.getCredentialConfigurationById(Mockito.anyString())).thenReturn(credentialConfigurationRequest);
+        Mockito.when(credentialConfigurationService.getCredentialConfigurationById(Mockito.anyString())).thenReturn(credentialConfigurationDTO);
 
         mockMvc.perform(get("/credentials/configurations/1"))
                 .andExpect(status().isOk())
@@ -109,16 +98,59 @@ public class CredentialConfigControllerTest {
 
     @Test
     public void updateExistingCredentialConfiguration_Success() throws Exception {
-        Map<String, String> configurationResponse = new HashMap<>();
-        configurationResponse.put("id", "farmer-credential-config-001");
-        configurationResponse.put("status", "active");
-        Mockito.when(credentialConfigurationService.updateCredentialConfiguration(Mockito.anyString(), eq(credentialConfigurationRequest))).thenReturn(configurationResponse);
+        CredentialConfigResponse credentialConfigResponse = new CredentialConfigResponse();
+        credentialConfigResponse.setId("farmer-credential-config-001");
+        credentialConfigResponse.setStatus("active");
+        Mockito.when(credentialConfigurationService.updateCredentialConfiguration(Mockito.anyString(), eq(credentialConfigurationDTO))).thenReturn(credentialConfigResponse);
 
         mockMvc.perform(put("/credentials/configurations/1")
-                        .content(objectMapper.writeValueAsBytes(credentialConfigurationRequest))
+                        .content(objectMapper.writeValueAsBytes(credentialConfigurationDTO))
                         .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.id").exists())
                 .andExpect(jsonPath("$.status").exists());
+    }
+
+    @Test
+    public void deleteExistingCredentialConfiguration_Success() throws Exception {
+        String response = "Configuration deleted with id: 1";
+        Mockito.when(credentialConfigurationService.deleteCredentialConfigurationById(Mockito.anyString())).thenReturn(response);
+
+        mockMvc.perform(delete("/credentials/configurations/1"))
+                .andExpect(status().isOk())
+                .andExpect(content().string(response));
+    }
+
+        @Test
+    public void getIssuerMetadata_noQueryParams_thenPass() throws Exception {
+        CredentialIssuerMetadata credentialIssuerMetadata = new CredentialIssuerMetadata();
+        credentialIssuerMetadata.setCredentialIssuer("https://localhost:9090");
+        credentialIssuerMetadata.setAuthorizationServers(List.of("https://example.com/auth"));
+        credentialIssuerMetadata.setCredentialEndpoint("https://localhost:9090/v1/certify/issuance/credential");
+        Map<String, String> display = new HashMap<>();
+        display.put("name", "Test Credential Issuer");
+        display.put("locale", "en");
+        credentialIssuerMetadata.setDisplay(List.of(display));
+
+        CredentialConfigurationSupported credentialConfigurationSupported = new CredentialConfigurationSupported();
+        credentialConfigurationSupported.setFormat("ldp_vc");
+        credentialConfigurationSupported.setScope("test_vc_ldp");
+        credentialConfigurationSupported.setCryptographicBindingMethodsSupported(List.of("did:jwk"));
+        credentialConfigurationSupported.setCredentialSigningAlgValuesSupported(List.of("Ed25519Signature2020"));
+        Map<String, Object> jwtValues = Map.of("proof_signing_alg_values_supported", Arrays.asList("RS256", "ES256"));
+        credentialConfigurationSupported.setProofTypesSupported(jwtValues);
+        credentialConfigurationSupported.setDisplay(List.of());
+        credentialConfigurationSupported.setOrder(Arrays.asList("test1", "test2", "test3", "test4"));
+        credentialIssuerMetadata.setCredentialConfigurationSupported(Map.of("TestCredential_ldp", credentialConfigurationSupported));
+
+        Mockito.when(credentialConfigurationService.fetchCredentialIssuerMetadata(Mockito.anyString())).thenReturn(credentialIssuerMetadata);
+
+        mockMvc.perform(get("/credentials/.well-known/openid-credential-issuer"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.credential_issuer").exists())
+                .andExpect(jsonPath("$.credential_configurations_supported").exists())
+                .andExpect(header().string("Content-Type", "application/json"));
+
+        Mockito.verify(credentialConfigurationService).fetchCredentialIssuerMetadata("latest");
     }
 }
